# tensor-impute

./: .gitignore  README.md  graphs.ipynb  makefile  old_pyproject.toml  pyproject.toml  setup.py
.github/workflows/: pytest.yml
src/tensor_impute/: __init__.py
tensorpack/: __init__.py  cmtf.py  decomposition.py  direct_opt.py  plot.py  tensorly_als.py  tracker.py
timpute/: SVD_impute.py  __init__.py  attempt_figures.py  cmtf.py  common.py  decomposition.py  direct_opt.py  figures.py  generateTensor.py  imp_plots.py  import_hmsData.py  impute_helper.py  initialization.py  initialize_fac.py  linesearch.py  method_ALS.py  method_CLS.py  method_DO.py  method_PM.py  nonDecomp.py  plot.py  tensorly_als  tensorly_als.py  test.py  tracker.py  xplots.py
timpute/analysis/: CoHrun.py  knownrank.py  real-zohar.py  unknownrank.py
timpute/data/: import_hmsData.py
timpute/data/CoH/: CoH_Rec.nc  CoH_Tensor_DataSet.nc
timpute/data/hms/: agent_intersect.csv  baseline_fractions.csv
timpute/figures/: __init__.py  bestComps.txt  common.py  create_figures.sh  dataUsage.py  dataUsage.sh  explore.py  figure1.py  figure2-3.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py  figure_data.py  figure_helper.py  generate_data.sh  generate_figures.sh  generate_real_data.sh  generate_sim_data.sh  memUsage.out  memUsage.py  memUsage.sh  real_data.py  real_data_1.py  real_data_2.py  realdatafigs.py  runImputation.py  sim_data.py  supplements.py
timpute/figures/cache/: bestComps_chord.pickle  bestComps_entry.pickle  dataset_info.txt
timpute/figures/cache/alter/: output.txt
timpute/figures/cache/alter/drop_0.01/: chord-perform_ALS.decomposition  chord-perform_ALS.tracker  chord-perform_CLS.decomposition  (+9 more)
timpute/figures/cache/coh_response/: output.txt
timpute/figures/cache/dataUsage/: 0.05.pickle  0.1.pickle  0.2.pickle  0.3.pickle  0.4.pickle  0.5.pickle  0.pickle
timpute/figures/cache/figure2/: output.txt
timpute/figures/cache/hms/: output.txt
timpute/figures/cache/test/: output.txt
timpute/figures/cache/zohar/: output.txt
timpute/figures/img/: bestComps_chord.xlsx  bestComps_entry.xlsx  chordModes.xlsx  figure3.txt  figure4.txt  initTime.xlsx  iterTime.xlsx
timpute/figures/revision_img/: bestComps_chord.xlsx  bestComps_entry.xlsx  bestSimComps_chord.xlsx  bestSimComps_entry.xlsx  bestSimError_chord.xlsx  bestSimError_chord_total.xlsx  bestSimError_entry.xlsx  bestSimError_entry_total.xlsx  figure4.txt  figure5.txt  initTime.xlsx  iterTime.xlsx
timpute/test/: simulated_tensors.py  test_cls.py  test_cmtf.py  test_decomposition.py  test_direct_opt.py  test_do.py  test_dopt.py  test_impute.py
(+636 files in other folders)
