[project]
name = "timpute"
version = "0.1.0"
description = "Examining various imputation methods for tensor decomposition."
authors = ["Your Name <you@example.com>"]
license = "MIT"
dependencies = [
    "numpy>=2.1",
    "tensorly>=0.8",
    "matplotlib>=3.9",
    "tqdm>=4.67",
    "seaborn>=0.13",
    "xarray>=2024",
    "scikit-learn>=1.1.3",
]

[tool.rye.dev-dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
tensordata = {git = "https://github.com/meyer-lab/tensordata.git", rev = "6afaec35c552c3ee91990db74c740728ddf37a55"}
pyright = ">=1.1.389"
isort = ">=5.13"

[build-system]
requires = ["rye>=0.1.0"]
build-backend = "rye.masonry.api"
