[project]
name = "tensor-impute"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
authors = [
    { name = "ehung", email = "ethanhung11@gmail.com" }
]
dependencies = [
    "numpy>=2.1",
    "tensorly>=0.8",
    "matplotlib>=3.9",
    "tqdm>=4.67",
    "seaborn>=0.13",
    "xarray>=2024",
    "scikit-learn>=1.1.3",
    "tensordata @ git+https://github.com/meyer-lab/tensordata",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pyright>=1.1.398",
    "isort>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tensor_impute"]
